# src/Api/Endpoints/ImportNotifications/UpdatedImportNotificationRequest.cs
@@ -1,11 +1,16 @@
 using System.ComponentModel;
-using System.ComponentModel.DataAnnotations;
 using Microsoft.AspNetCore.Mvc;
 
 namespace Defra.PhaImportNotifications.Api.Endpoints.ImportNotifications;
 
 public sealed class UpdatedImportNotificationRequest : IDateTimeRangeDefinition
 {
+    private const string DEFAULT_PAGE = "1";
+
+    private const string DEFAULT_PAGESIZE = "100";
+
+    internal const string MAX_PAGESIZE = "1000";
+
     [Description(
         "Filter import notifications by BCP.  This parameter is optional if the caller is authorised to see all BCPs, mandatory otherwise."
     )]
@@ -33,6 +38,18 @@ public sealed class UpdatedImportNotificationRequest : IDateTimeRangeDefinition
     )]
     [FromQuery(Name = "to")]
     public DateTime To { get; init; }
+
+    [Description($"Page number (1-based). Defaults to {DEFAULT_PAGE} if not specified.")]
+    [FromQuery(Name = "page")]
+    public int? PageFromQuery { get; init; }
+
+    internal int Page => PageFromQuery ?? int.Parse(DEFAULT_PAGE);
+
+    [Description($"Number of items per page. Defaults to {DEFAULT_PAGESIZE} if not specified. Max of {MAX_PAGESIZE}.")]
+    [FromQuery(Name = "pageSize")]
+    public int? PageSizeFromQuery { get; init; }
+
+    internal int PageSize => PageSizeFromQuery ?? int.Parse(DEFAULT_PAGESIZE);
 }
 
 public interface IDateTimeRangeDefinition
