# src/Api/Services/ITradeImportsDataApiService.cs
@@ -4,11 +4,13 @@ namespace Defra.PhaImportNotifications.Api.Services;
 
 public interface ITradeImportsDataApiService
 {
-    Task<IEnumerable<ImportNotificationUpdate>> GetImportNotificationUpdates(
+    Task<ImportNotificationUpdatesPaged> GetImportNotificationUpdates(
         string[] importNotificationTypes,
         string[] bcp,
         DateTime from,
         DateTime to,
+        int page,
+        int pageSize,
         CancellationToken cancellationToken
     );
     Task<ImportPreNotification?> GetImportNotification(string chedReferenceNumber, CancellationToken cancellationToken);
