# src/Contracts/ImportPreNotificationUpdatesResponse.g.cs
@@ -7,4 +7,13 @@ public partial record ImportPreNotificationUpdatesResponse
 {
     [JsonPropertyName("importPreNotificationUpdates")]
     public required List<ImportPreNotificationUpdateResponse> ImportPreNotificationUpdates { get; init; }
+
+    [JsonPropertyName("total")]
+    public required int Total { get; init; }
+
+    [JsonPropertyName("page")]
+    public required int Page { get; init; }
+
+    [JsonPropertyName("pageSize")]
+    public required int PageSize { get; init; }
 }
